fixed intro alignment

--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -65,6 +65,12 @@ canvas {
     font-weight: bolder;
   }
 
+  .mail-icon {
+   vertical-align: -6px;
+   display: inline-flex;
+   
+  }
+
   a {
     text-decoration: none;
   }
